# background_ai

./: .gitignore  README.md  index.html  package-lock.json  package.json  shadow-align.html  vite.config.ts
capture/: CONTRACT.md  README.md  pyproject.toml
capture/scripts/: crop-matte.py  get-models.sh  optimize-rvm-model.py
capture/src/capture/: __init__.py  compose.py  config.py  frames.py  main.py  pipeline.py  pose_engine.py  presence.py  server.py  webrtc.py
capture/src/capture/matting/: __init__.py  mediapipe_engine.py  rvm_engine.py
capture/src/capture/sources/: __init__.py  file.py  webcam.py  zed.py
capture/tests/: bench_rvm_pose_serial.py  test_compose.py  test_config.py  test_main_pose_wiring.py  test_matting_contract.py  test_pipeline.py  test_pose_engine.py  test_presence.py  test_server.py  test_smoke.py  test_sources.py  test_webrtc.py
capture/viewer/: viewer.html
docs/: CONTENT_GUIDE.md  gpu-deploy.md  hardware-options.html
scripts/: add-photo.mjs  blender-lamp-sizes.py  export-shadow-data.py  gen-depth.mjs  gen-photo.mjs  gen-world.mjs
src/: main.ts  smoke.test.ts
src/app/: calibration.test.ts  calibration.ts  dolly.test.ts  dolly.ts  modes.test.ts  modes.ts  worldMeta.test.ts  worldMeta.ts  worldSwitcher.test.ts  worldSwitcher.ts
src/debug/: align.ts  panel.ts
src/lux/: backoff.test.ts  backoff.ts  colorMatch.test.ts  colorMatch.ts  compositor.ts  config.ts  devFlags.test.ts  devFlags.ts  devPanel.ts  experience.test.ts  experience.ts  golden.ts  idle.ts  look.test.ts  look.ts  lut.test.ts  lut.ts  lux-theme.css  mirrorGeom.ts  (+17 more)
(+53 files in other folders)
