[project]
name = "capture"
version = "0.1.0"
description = "Stellar Mirror Lux: захват, маттинг, RGBA-стрим"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python>=4.9",
  "mediapipe>=0.10.14",
  "onnxruntime>=1.18",
  "aiortc>=1.9",
  "aiohttp>=3.9",
  "pydantic>=2.7",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true   # cv2/mediapipe/aiortc без полных стабов

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
capture = "capture.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/capture"]
